<resources>
    <string name="app_name">Get Up</string>
    <string name="text_weight_change">Change Attributes</string>
    <string name="text_calories">Calories:</string>
    <string name="text_steps">Steps:</string>
    <string name="text_Distance">Miles:</string>
    <string name="nav_daily_goal_text">Daily Goal</string>
    <string name="nav_attribute_text">Change Attributes</string>
    <string name="nav_height_text">Change Height</string>
    <string name="nav_home_text">Home</string>
    <string name="nav_settings_text">Logout</string>
    <string name="item_share_text">Share</string>
    <string name="nav_header_name">Name</string>
    <string name="nav_header_email">email</string>
    <string name="navigation_open">Open navigation drawer</string>
    <string name="navigation_close">Close navigation drawer</string>
    <string name="text_pounds">Pounds</string>
    <string name="text_feet">Feet</string>
    <string name="text_inches">Inches</string>
    <string name="text_daily_goal">Change Daily Goal</string>
    <string name="edit_text_password">Password</string>
    <string name="edit_text_email">Email</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="edit_text_password_confirm">Confirm Password</string>
    <string name="button_logout">Logout</string>
    <string name="textView_monday">Day 1</string>
    <string name="textView_tuesday">Day 2</string>
    <string name="textView_wednesday">Day 3</string>
    <string name="textView_thursday">Day 4</string>
    <string name="textView_friday">Day 5</string>
    <string name="textView_saturday">Day 6</string>
    <string name="textView_sunday">Day 7</string>
    <string name="button_weekly_progress">Weekly Progress</string>
    <string name="goal_fragment_motivate">Please try to motivate yourself</string>
    <string name="goal_fragment_goal">5000</string>
    <string name="goal_fragment_text_view">Goal:</string>
    <string name="goal_fragment_text_view_steps">Steps</string>
    <string name="home_fragment_toast_sensor">No sensor detected. App needs sensor. Sorry.</string>
    <string name="home_fragment_database">Check Weekly Progress</string>
    <string name="home_fragment_notification_inactivity_description">Inactive Channel</string>
    <string name="login_activity_email">Enter an email</string>
    <string name="login_activity_password">Enter a password</string>
    <string name="login_activity_progress">Logging in</string>
    <string name="login_activity_verify">Please verify your email.</string>
    <string name="login_activity_deny">Email or Password is incorrect</string>
    <string name="register_activity_characters">Password must be at least 6 characters</string>
    <string name="register_activity_passwords">Passwords don\'t match </string>
    <string name="register_activity_registered">Registered. Check your email</string>
    <string name="register_activity_exists">This user already exists</string>
    <string name="register_activity_error">Something\'s wrong</string>
    <string name="weight_fragment_height">Please input a valid height.</string>
</resources>
