<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_Step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="139dp"
        android:text="@string/text_steps"
        android:textColor="@android:color/black"
        android:translationZ="1dp" />

    <TextView
        android:id="@+id/textView_Step_Count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_Step"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="@android:color/holo_green_light"
        android:translationZ="1dp" />

    <ProgressBar
        android:id="@+id/progressBar_Step_Count"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        android:progressDrawable="@drawable/progress_circle"
        android:rotation="-90"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="19dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_Distance_Text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="0dp"
        android:text="@string/text_calories"
        android:textColor="@android:color/black"
        android:translationZ="1dp" />

    <TextView
        android:id="@+id/textView_Calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_Distance"
        android:layout_alignParentStart="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="0dp"
        android:textColor="@android:color/holo_green_light"
        android:translationZ="1dp" />

    <ProgressBar
        android:id="@+id/progressBar_Calories"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:progressDrawable="@drawable/progress_circle"
        android:rotation="-90"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="19dp" />

    <TextView
        android:id="@+id/textView_Distance_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="96dp"
        android:text="@string/text_Distance"
        android:textColor="@android:color/black"
        android:translationZ="1dp" />

    <TextView
        android:id="@+id/textView_Distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="66dp"
        android:textColor="@android:color/holo_green_light"
        android:translationZ="1dp" />

    <ProgressBar
        android:id="@+id/progressBar_Disance"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="220dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/white"
        android:progressDrawable="@drawable/progress_circle"
        android:rotation="-90"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="19dp" />

</RelativeLayout>